2007-09-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/run-xtests.sh: Add support to skip tests.
	* xtests/tst-pam_limits1.c: Skip test if RLIMIT_NICE is not
	defined.

2007-09-03  Steve Langasek  <vorlon@debian.org>

	* modules/pam_limits/pam_limits.c: remove a number of unnecessary
	string manipulations, including a strncpy() that was acting on
	overlapping memory.

	* libpam_misc/misc_conv.c: don't block SIGINT in misc_conv; it's
	perfectly valid to allow the user to interrupt at a prompt.  If
	an application wants prompts to not be interruptable, the
	application should take responsibility for blocking SIGINT.

2007-09-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* examples/Makefile.am: Fix usage of LIBADD, LDADD and LDFLAGS.
	* libpam/Makefile.am: Likewise.
	* modules/pam_access/Makefile.am: Likewise.
	* modules/pam_cracklib/Makefile.am: Likewise.
	* modules/pam_debug/Makefile.am: Likewise.
	* modules/pam_deny/Makefile.am: Likewise.
	* modules/pam_echo/Makefile.am: Likewise.
	* modules/pam_env/Makefile.am: Likewise.
	* modules/pam_exec/Makefile.am: Likewise.
	* modules/pam_faildelay/Makefile.am: Likewise.
	* modules/pam_filter/Makefile.am: Likewise.
	* modules/pam_filter/upperLOWER/Makefile.am: Likewise.
	* modules/pam_ftp/Makefile.am: Likewise.
	* modules/pam_group/Makefile.am: Likewise.
	* modules/pam_issue/Makefile.am: Likewise.
	* modules/pam_keyinit/Makefile.am: Likewise.
	* modules/pam_lastlog/Makefile.am: Likewise.
	* modules/pam_limits/Makefile.am: Likewise.
	* modules/pam_listfile/Makefile.am: Likewise.
	* modules/pam_localuser/Makefile.am: Likewise.
	* modules/pam_loginuid/Makefile.am: Likewise.
	* modules/pam_mail/Makefile.am: Likewise.
	* modules/pam_mkhomedir/Makefile.am: Likewise.
	* modules/pam_motd/Makefile.am: Likewise.
	* modules/pam_namespace/Makefile.am: Likewise.
	* modules/pam_nologin/Makefile.am: Likewise.
	* modules/pam_permit/Makefile.am: Likewise.
	* modules/pam_rhosts/Makefile.am: Likewise.
	* modules/pam_rootok/Makefile.am: Likewise.