@@ -1,5 +1,11 @@
 2007-09-27  Thorsten Kukuk  <kukuk@thkukuk.de>
 
+	* xtests/tst-pam_succeed_if1.c: New test case for
+	https://bugzilla.redhat.com/show_bug.cgi?id=295151
+	* xtests/tst-pam_succeed_if1.sh: Script to run test case.
+	* xtests/tst-pam_succeed_if1.pamd: Config for test case.
+	* xtests/Makefile.am: Add tst-pam_succeed_if1 test case.
+
 	* xtests/run-xtests.sh: Add support to skip tests.
 	* xtests/tst-pam_limits1.c: Skip test if RLIMIT_NICE is not
 	defined.
